[gd_scene load_steps=4 format=3 uid="uid://weyekqshii8q"]

[ext_resource type="Texture2D" uid="uid://c8wgr7122n4sn" path="res://assets/tools/stake/stake.png" id="1_b6ouk"]
[ext_resource type="Script" path="res://assets/tools/stake/stake.gd" id="2_qx8uv"]
[ext_resource type="AudioStream" uid="uid://df4g281bkss6o" path="res://assets/tools/stake/792418__randbsoundbites__staking-a-vampire.mp3" id="3_6cb75"]

[node name="Stake" type="TextureButton"]
z_index = 10
offset_left = -26.0
offset_top = -75.0
offset_right = 28.0
offset_bottom = 90.0
script = ExtResource("2_qx8uv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(28, 88)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_b6ouk")

[node name="Label" type="Label" parent="."]
modulate = Color(0.533333, 0.533333, 0.533333, 1)
layout_mode = 0
offset_left = -59.0
offset_top = -61.0
offset_right = 32.0
offset_bottom = -18.0
text = "stake"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6cb75")
volume_db = 15.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
